--- a/Front- End/pubspec.yaml
+++ b/Front- End/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   translator: ^1.0.0
   another_carousel_pro: ^1.0.2
   loading_animation_widget: ^1.3.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
